...
            headerBackVisible: false,
          }}
        />
        <Stack.Screen
          name="HistoryList"
          component={HistoryListScreen}
          options={{ title: 'トーク履歴' }}
        />
        <Stack.Screen
          name="HistoryDetail"
          component={HistoryDetailScreen}
          options={{ title: '' }}
        />
...
